# ferrite

./: .gitignore  Cargo.toml  README.md
crates/ferralloy/: Cargo.toml
crates/ferralloy-agent/: Cargo.toml
crates/ferralloy-agent/src/: main.rs
crates/ferralloy-bridge/: Cargo.toml
crates/ferralloy-bridge/src/: lib.rs
crates/ferralloy-fleet/: Cargo.toml
crates/ferralloy-fleet/src/: main.rs
crates/ferralloy-pack/: Cargo.toml
crates/ferralloy-pack/src/: lib.rs  manifest.rs  sign.rs
crates/ferralloy-runtime/: Cargo.toml
crates/ferralloy-runtime/src/: ferric_engine.rs  lib.rs  native.rs
crates/ferralloy-runtime/tests/: bridge_stage.rs  wasi_cmd.rs
crates/ferralloy/src/: main.rs
crates/ferrite/: Cargo.toml
crates/ferrite-agent/: Cargo.toml
crates/ferrite-agent/src/: main.rs
crates/ferrite-bridge/: Cargo.toml
crates/ferrite-bridge/src/: lib.rs
crates/ferrite-fleet/: Cargo.toml
crates/ferrite-fleet/src/: main.rs
crates/ferrite-pack/: Cargo.toml
crates/ferrite-pack/src/: archive.rs  lib.rs  manifest.rs
crates/ferrite-runtime/: Cargo.toml
crates/ferrite-runtime/src/: lib.rs  native.rs
crates/ferrite-runtime/tests/: bridge_stage.rs  wasi_cmd.rs
crates/ferrite/src/: main.rs
payloads/pd-hover/: Cargo.toml
payloads/pd-hover/src/: main.rs
