[workspace]
resolver = "3"
members = ["crates/ferralloy-pack", "crates/ferralloy", "crates/ferralloy-agent", "crates/ferralloy-runtime", "crates/ferralloy-bridge", "crates/ferralloy-fleet"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcharlot-physicalai-bmi/ferralloy"

[workspace.dependencies]
ferralloy-pack = { path = "crates/ferralloy-pack", version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "3"
getrandom = "0.4"
hex = "0.4"
tar = "0.4"
thiserror = "2"
anyhow = "1"

[profile.release]
lto = "thin"
strip = true

# No wgpu/naga fork patches — and this is the point. The ferric engine's
# cross-fabric bit-identity was proven (2026-07-24) to come entirely from the
# WGSL storage-pinning in ferric-core's kernels, NOT from compiler patches: on
# STOCK wgpu 30, Metal and Vulkan produce byte-identical digests (see
# ferric/docs/determinism/). So Ferralloy builds against the published
# ferric-core (v0.2, stock wgpu) with no forks — local and crates.io builds are
# identical, and `cargo install ferralloy` is deterministic out of the box.
