[package]
name = "ferralloy-bridge"
description = "Wire-protocol codecs + target registry for the sim-to-real hardware bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["robotics", "servo", "actuator", "protocol", "embedded"]
categories = ["embedded", "encoding"]

[dependencies]
