[package]
name = "ferralloy-fleet"
description = "ferralloy-fleet — the open, self-hostable fleet plane: channels, signed releases, device reports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ferralloy-fleet"
path = "src/main.rs"

[dependencies]
ferralloy-pack.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
