[package]
name = "ferralloy-pack"
description = "The signed, verified-behavior artifact format for physical-AI fleets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
tar.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
