[package]
name = "ferralloy-runtime"
description = "Sandboxed wasi-cmd execution + verified-behavior eval for ferralloy packs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferralloy-pack.workspace = true
ferralloy-bridge = { path = "../ferralloy-bridge", version = "0.1" }
wasmtime = "47"
wasmtime-wasi = "47"
hex.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tempfile = "3"
# engine "ferric" — GPU-fabric model verification (sibling checkout of ferric)
ferric-core = { version = "0.2", optional = true }
pollster = { version = "1", optional = true }
serde = { workspace = true, optional = true }

# Native-payload sandbox — Linux only (landlock + no-new-privs + rlimits).
# The deps are target-gated so the rest of the workspace still builds on macOS
# and wasm; the `native` feature just compiles the module (a stub off-Linux).
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"
seccompiler = "0.5"

[features]
ferric = ["dep:ferric-core", "dep:pollster", "dep:serde"]
native = []
