[package]
name = "ferralloy"
description = "Ferralloy CLI — build, sign, verify, and deploy verified-behavior packs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferralloy-pack.workspace = true
ferralloy-runtime = { path = "../ferralloy-runtime", features = ["ferric", "native"] }
clap = { version = "4", features = ["derive"] }
ureq = "3"
mdns-sd = "0.20"
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
