[package]
name = "ferrite-fleet"
description = "ferrite-fleet — the open, self-hostable fleet plane: channels, signed releases, device reports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ferrite-fleet"
path = "src/main.rs"

[dependencies]
ferrite-pack.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
